--- a/test.html
+++ b/test.html
@@ -6,7 +6,9 @@
 	<BODY>
 		<h1>ceci est un diagnostique </h1>
 
-        <script src="./test.js"></script>
+        <!--<script src="./test.js"></script> -->
+		<script src="./jeu-hifouni.js"></script>
+		
    	</BODY>
        
 
