--- a/test.html
+++ b/test.html
@@ -7,7 +7,9 @@
 		<h1>ceci est un diagnostique </h1>
 
         <!--<script src="./test.js"></script> -->
-		<script src="./jeu-hifouni.js"></script>
+		<!--<script src="./jeu-hifouni.js"></script>-->
+		<!--<script src="./capgemini-api.js"></script>-->
+		<script src="./pendue.js"></script>
 		
    	</BODY>
        
